# SimpleGeneticAgent

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Random.h  build.sh  build_and_run.sh
.github/workflows/: cmake.yml
Agent/: CrossoverStrategy.cpp  CrossoverStrategy.h  Entity.cpp  Entity.h  IAgentVisitor.h  IGeneticAgent.h  Individual.cpp  Individual.h  SelectionStrategy.cpp  SelectionStrategy.h  SimpleGeneticAgent.cpp  SimpleGeneticAgent.h  SimpleGeneticBestEntityVisitor.cpp  SimpleGeneticBestEntityVisitor.h  SimpleGeneticBestIndividualVisitor.cpp  SimpleGeneticBestIndividualVisitor.h  SimpleGeneticEveryGenerationVisitor.cpp  SimpleGeneticEveryGenerationVisitor.h
Environment/: EightPuzzleGame.cpp  EightPuzzleGame.h  GameEnvironment.cpp  GameEnvironment.h  IGame.h
